examples/neg/higher_rank_poly_type_scope.effekt
def g { h: [A](A) => A }: A = h(42)
